--- a/scss/global/_vars.scss
+++ b/scss/global/_vars.scss
@@ -2,12 +2,13 @@
 
    // container
 
-   --container-width: 1200px;
+   --container-width: 1290px;
    --container-padding: 15px;
 
    // fonts
 
-   --font-primary: 'Roboto', sans-serif;
+   --font-primary: "Golos Text", sans-serif;
+   --font-secondary: "Onest", sans-serif;
 
    // colors
 
