--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -1,3 +1,68 @@
 .header {
    z-index: 10;
+   font-family: "Golos Text", sans-serif;
+
+   &__inner {
+      padding: 16px 0;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      gap: 15px;
+   }
+
+   &__logo {
+      flex-shrink: 0;
+   }
+
+   &__logo-img {}
+
+   &__menu {}
+
+   &__menu-list {
+      display: flex;
+      align-items: center;
+      gap: 12px;
+   }
+
+   &__menu-item {}
+
+   &__menu-link {
+      border-radius: 58px;
+      padding: 12px 16px;
+      font-size: 16px;
+      color: #161c24;
+      background: #f4f6f8;
+
+      &:hover {
+         color: #fff;
+         background: #5b7dde;
+      }
+   }
+
+   &__time {
+      font-weight: 500;
+      font-size: 13px;
+      color: #5b5b5b;
+   }
+
+   &__phone {
+      padding-left: 13px;
+   }
+
+   &__phone-btn {
+      border-radius: 8px;
+      border: 1px solid transparent;
+      width: 38px;
+      height: 38px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: #f4f6f8;
+
+      &:hover {
+         border: 1px solid #5b7dde;
+      }
+   }
+
+   &__phone-img {}
 }
