--- a/scss/global/_base.scss
+++ b/scss/global/_base.scss
@@ -4,8 +4,7 @@ body {
    display: flex;
    flex-direction: column;
    font-family: var(--font-primary);
-   color: var(--color-text);
-   background: var(--color-bg);
+   background-color: #fff;
 }
 
 a,
