--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -1,6 +1,9 @@
 .header {
-   padding: 16px 0;
    z-index: 10;
+   border-radius: 0 0 20px 20px;
+   padding: 16px 0;
+   box-shadow: 0 -26px 82px 0 rgba(55, 80, 117, 0.15);
+   background: #fff;
 
    &__inner {
       display: flex;
