--- a/scss/main.scss
+++ b/scss/main.scss
@@ -13,8 +13,10 @@
 @import 'blocks/container';
 @import 'blocks/btn';
 @import 'blocks/title-2';
+@import 'blocks/card';
 
 @import 'blocks/header';
 @import 'blocks/main';
 @import 'blocks/hero';
+@import 'blocks/summer';
 @import 'blocks/footer';
