--- a/scss/blocks/_title-2.scss
+++ b/scss/blocks/_title-2.scss
@@ -1,1 +1,19 @@
-.title-2 {}
+.title-2 {
+   display: flex;
+   align-items: center;
+   font-family: "Onest", sans-serif;
+   font-weight: 700;
+   font-size: 36px;
+   line-height: 1.02;
+   color: #161c24;
+
+   &__text {}
+
+   &__mark {
+      color: #5b7dde;
+   }
+
+   &__icon {
+      margin: 0 0 0 10px;
+   }
+}
