--- a/scss/blocks/_card.scss
+++ b/scss/blocks/_card.scss
@@ -19,10 +19,15 @@
 
    &__top {
       position: relative;
+      height: 234px;
    }
 
    &__image {
       border-radius: 15px;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      object-position: center;
    }
 
    &__icon {
