--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,7 +11,6 @@
 @import 'blocks/none';
 @import 'blocks/no-scroll';
 @import 'blocks/container';
-@import 'blocks/btn';
 @import 'blocks/title-2';
 @import 'blocks/card';
 
@@ -19,4 +18,5 @@
 @import 'blocks/main';
 @import 'blocks/hero';
 @import 'blocks/summer';
+@import 'blocks/winter';
 @import 'blocks/footer';
