--- a/scss/main.scss
+++ b/scss/main.scss
@@ -19,4 +19,5 @@
 @import 'blocks/hero';
 @import 'blocks/summer';
 @import 'blocks/winter';
+@import 'blocks/additional';
 @import 'blocks/footer';
