--- a/scss/blocks/_additional.scss
+++ b/scss/blocks/_additional.scss
@@ -1,6 +1,6 @@
 .additional {
    padding: 120px 0;
-   background: #f4f6f8 url('../img/decor/additional-bg.svg') no-repeat top 315px center;
+   background: url('../img/decor/additional-bg.svg') no-repeat top 315px center;
 
    &__inner {
       display: flex;
