--- a/scss/blocks/_hero.scss
+++ b/scss/blocks/_hero.scss
@@ -1,7 +1,7 @@
 .hero {
    margin-top: -20px;
    padding: 66px 0 140px;
-   background: #f4f6f8 url('../img/decor/hero-bg.svg') no-repeat top 100px center;
+   background: url('../img/decor/hero-bg.svg') no-repeat top 100px center;
 
    &__info {
       overflow: hidden;
