--- a/scss/main.scss
+++ b/scss/main.scss
@@ -25,4 +25,7 @@
 @import 'blocks/additional';
 @import 'blocks/news';
 @import 'blocks/blog';
+@import 'blocks/form';
+@import 'blocks/messengers';
+@import 'blocks/consultation';
 @import 'blocks/footer';
