--- a/scss/blocks/_form.scss
+++ b/scss/blocks/_form.scss
@@ -1,6 +1,7 @@
 .form {
 
    &__top {
+      margin: 0 0 24px;
       display: flex;
       align-items: center;
       justify-content: space-between;
@@ -12,16 +13,36 @@
       border-radius: 10px;
       padding: 18px 12px;
       width: 100%;
+      height: 57px;
       font-size: 16px;
       line-height: 1.3;
       color: #161c24;
+      transition: all .2s;
 
       &::placeholder {
          color: #b7c1cc;
       }
+
+      &:focus {
+         border-color: #000;
+      }
    }
 
-   &__btn {}
+   &__btn {
+      border-radius: 10px;
+      padding: 16px 62px;
+      width: 220px;
+      height: 57px;
+      font-weight: 600;
+      font-size: 18px;
+      line-height: 1.1;
+      color: #fff;
+      background: #5b7dde;
+
+      &:hover {
+         background: #3e65d7;
+      }
+   }
 
    &__bottom {}
 
