--- a/scss/blocks/_form.scss
+++ b/scss/blocks/_form.scss
@@ -29,10 +29,11 @@
    }
 
    &__btn {
+      flex-shrink: 0;
       border-radius: 10px;
-      padding: 16px 62px;
+      padding: 16px 32px;
       width: 220px;
-      height: 57px;
+      min-height: 57px;
       font-weight: 600;
       font-size: 18px;
       line-height: 1.1;
@@ -44,15 +45,66 @@
       }
    }
 
-   &__bottom {}
+   &__bottom {
+      display: flex;
+      gap: 12px;
+   }
 
    &__checkbox {}
 
-   &__checkbox-input {}
+   &__checkbox-input {
+      position: absolute;
+      width: 1px;
+      height: 1px;
+      margin: -1px;
+      overflow: hidden;
+      clip: rect(0, 0, 0, 0);
 
-   &__checkbox-fake {}
+      &:checked + .form__checkbox-fake {
+         background: #5b7dde;
 
-   &__text {}
+         &::after {
+            opacity: 1;
+         }
+      }
+   }
 
-   &__link {}
+   &__checkbox-fake {
+      position: relative;
+      border: 1px solid #5b7dde;
+      border-radius: 5px;
+      width: 20px;
+      height: 20px;
+      display: block;
+      background: #fff;
+      transition: all .2s;
+
+      &::after {
+         content: '';
+         display: block;
+         position: absolute;
+         top: -2px;
+         left: -3px;
+         width: 24px;
+         height: 24px;
+         background: url('../img/icons/check.svg') no-repeat center;
+         opacity: 0;
+         transition: all .2s;
+      }
+   }
+
+   &__text {
+      font-size: 16px;
+      line-height: 1.3;
+      color: #a5b2bf;
+   }
+
+   &__link {
+      font-weight: 500;
+      color: #5b7dde;
+
+      &:hover {
+         text-decoration: underline;
+      }
+   }
 }
