--- a/scss/main.scss
+++ b/scss/main.scss
@@ -28,4 +28,5 @@
 @import 'blocks/form';
 @import 'blocks/messengers';
 @import 'blocks/consultation';
+@import 'blocks/rental';
 @import 'blocks/footer';
