--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -1,6 +1,6 @@
 .footer {
    border-radius: 50px 50px 0 0;
-   // margin-top: -50px;
+   margin-top: -50px;
    padding: 50px 0 20px;
    background: #161c24;
 
