--- a/scss/blocks/_summer.scss
+++ b/scss/blocks/_summer.scss
@@ -4,6 +4,22 @@
    padding: 120px 0;
    background: #fff;
 
+   @include laptop {
+      padding: 100px 0;
+   }
+
+   @include laptop-small {
+      padding: 80px 0;
+   }
+
+   @include tablet {
+      padding: 60px 0;
+   }
+
+   @include mobile {
+      padding: 40px 0;
+   }
+
    &__title {
       margin: 0 0 40px;
    }
@@ -12,5 +28,9 @@
       display: grid;
       gap: 30px;
       grid-template-columns: repeat(2, 1fr);
+
+      @include tablet {
+         grid-template-columns: 1fr;
+      }
    }
 }
