--- a/scss/blocks/_title-2.scss
+++ b/scss/blocks/_title-2.scss
@@ -1,11 +1,17 @@
 .title-2 {
-   display: flex;
-   align-items: center;
    font-family: "Onest", sans-serif;
    font-weight: 700;
    font-size: 36px;
    line-height: 1.02;
    color: #161c24;
+
+   @include tablet {
+      font-size: 32px;
+   }
+
+   @include mobile {
+      font-size: 24px;
+   }
 
    &__text {}
 
@@ -14,6 +20,11 @@
    }
 
    &__icon {
-      margin: 0 0 0 10px;
+      transform: translateY(3px);
+      display: inline-block;
+
+      @include mobile {
+         width: 20px;
+      }
    }
 }
