--- a/scss/main.scss
+++ b/scss/main.scss
@@ -13,6 +13,7 @@
 
 @import 'blocks/none';
 @import 'blocks/container';
+@import 'blocks/section';
 @import 'blocks/title-2';
 @import 'blocks/card';
 
