--- a/scss/blocks/_hero.scss
+++ b/scss/blocks/_hero.scss
@@ -53,6 +53,7 @@
       font-weight: 700;
       font-size: 52px;
       line-height: 1.1;
+      text-wrap: balance;
       color: #161c24;
 
       @include tablet {
