--- a/scss/blocks/_consultation.scss
+++ b/scss/blocks/_consultation.scss
@@ -7,6 +7,14 @@
       justify-content: space-between;
       gap: 40px;
       background: #fff;
+
+      @include laptop-small {
+         flex-direction: column;
+      }
+
+      @include mobile {
+         padding: 30px 15px;
+      }
    }
 
    &__left {
@@ -18,6 +26,22 @@
       font-weight: 700;
       font-size: 48px;
       color: #161c24;
+
+      @include laptop {
+         font-size: 40px;
+      }
+
+      @include laptop-small {
+         font-size: 36px;
+      }
+
+      @include tablet {
+         font-size: 32px;
+      }
+
+      @include mobile {
+         font-size: 26px;
+      }
    }
 
    &__text {
@@ -30,5 +54,9 @@
    &__right {
       flex-shrink: 0;
       width: 342px;
+
+      @include laptop-small {
+         width: 100%;
+      }
    }
 }
