--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -9,6 +9,11 @@
       display: flex;
       align-items: center;
       gap: 32px;
+
+      @include tablet {
+         flex-direction: column;
+         justify-content: center;
+      }
    }
 
    &__logo {}
@@ -16,12 +21,16 @@
    &__logo-img {}
 
    &__time {
-      margin-left: auto;
+      margin: 0 0 0 auto;
       display: flex;
       align-items: center;
       gap: 5px;
       font-size: 14px;
       color: rgba(244, 246, 248, 0.6);
+
+      @include tablet {
+         margin: 0;
+      }
 
       &::before {
          content: '';
@@ -37,6 +46,11 @@
       display: flex;
       align-items: center;
       gap: 6px;
+
+      @include mobile {
+         flex-wrap: wrap;
+         justify-content: center;
+      }
    }
 
    &__address-icon {
@@ -92,6 +106,19 @@
       align-items: center;
       justify-content: space-between;
       gap: 12px;
+
+      @include laptop {
+         display: grid;
+         grid-template-columns: repeat(3, 1fr);
+      }
+
+      @include tablet {
+         grid-template-columns: repeat(2, 1fr);
+      }
+
+      @include mobile {
+         grid-template-columns: 1fr;
+      }
    }
 
    &__menu-item {
