--- a/scss/blocks/_rental.scss
+++ b/scss/blocks/_rental.scss
@@ -31,11 +31,11 @@
       }
 
       @include tablet {
-         padding: 32px;
+         padding: 32px 32px 100px;
       }
 
       @include mobile {
-         padding: 32px 15px;
+         padding: 32px 15px 100px;
       }
    }
 
