--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -1,5 +1,6 @@
 .header {
    z-index: 10;
+   position: relative;
    border-radius: 0 0 20px 20px;
    padding: 16px 0;
    box-shadow: 0 -26px 82px 0 rgba(55, 80, 117, 0.15);
@@ -35,7 +36,14 @@
    &__menu {
 
       @include laptop {
+         position: absolute;
+         top: 85px;
+         left: 0;
+         padding: 30px;
+         width: 100%;
+         min-height: calc(100vh - 85px);
          display: none;
+         background: #fff;
       }
 
       &--active {
@@ -50,6 +58,10 @@
       display: flex;
       align-items: center;
       gap: 12px;
+
+      @include laptop {
+         flex-direction: column;
+      }
    }
 
    &__menu-item {}
