--- a/scss/main.scss
+++ b/scss/main.scss
@@ -12,6 +12,7 @@
 // blocks
 
 @import 'blocks/none';
+@import 'blocks/no-scroll';
 @import 'blocks/container';
 @import 'blocks/section';
 @import 'blocks/title-2';
