--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -1,9 +1,22 @@
 .header {
+   position: relative;
    z-index: 10;
    border-radius: 0 0 20px 20px;
    padding: 16px 0;
    box-shadow: 0 -26px 82px 0 rgba(55, 80, 117, 0.15);
    background: #fff;
+
+   &--active {
+
+      @include laptop {
+         position: fixed;
+         top: 0;
+         right: 0;
+         bottom: 0;
+         left: 0;
+         overflow-y: auto;
+      }
+   }
 
    &__inner {
       display: flex;
@@ -35,15 +48,15 @@
    &__menu {
 
       @include laptop {
-         overflow: auto;
-         position: fixed;
+         pointer-events: none;
+         visibility: hidden;
+         position: absolute;
          top: 85px;
-         bottom: 0;
-         left: 0;
+         left: -120%;
          padding: 30px;
          width: 100%;
-         display: none;
          background: #fff;
+         transition: all .2s;
       }
 
       @include tablet {
@@ -53,7 +66,9 @@
       &--active {
 
          @include laptop {
-            display: block;
+            pointer-events: all;
+            visibility: visible;
+            left: 0;
          }
       }
    }
