--- a/scss/blocks/_additional.scss
+++ b/scss/blocks/_additional.scss
@@ -28,7 +28,7 @@
    &__subtitle {
       font-size: 18px;
       line-height: 1.2;
-      color: #454f5b;
+      color: var(--color-text-secondary);
    }
 
    &__cards {
