--- a/scss/blocks/_messengers.scss
+++ b/scss/blocks/_messengers.scss
@@ -16,7 +16,7 @@
       margin: 0 0 24px;
       font-size: 18px;
       line-height: 1.3;
-      color: #454f5b;
+      color: var(--color-text-secondary);
    }
 
    &__links {
