--- a/scss/global/_vars.scss
+++ b/scss/global/_vars.scss
@@ -9,4 +9,12 @@
 
    --font-primary: "Golos Text", sans-serif;
    --font-secondary: "Onest", sans-serif;
+
+   // colors
+
+   --color-primary: #5b7dde;
+   --color-primary-dark: #3e65d7;
+
+   --color-text-primary: #161C24;
+   --color-text-secondary: #454F5B;
 }
