--- a/scss/blocks/_consultation.scss
+++ b/scss/blocks/_consultation.scss
@@ -25,7 +25,7 @@
       margin: 0 0 20px;
       font-weight: 700;
       font-size: 48px;
-      color: #161c24;
+      color: var(--color-text-primary);
 
       @include laptop {
          font-size: 40px;
@@ -48,7 +48,7 @@
       margin: 0 0 32px;
       font-size: 18px;
       line-height: 1.3;
-      color: #454f5b;
+      color: var(--color-text-secondary);
    }
 
    &__right {
