--- a/scss/blocks/_form.scss
+++ b/scss/blocks/_form.scss
@@ -21,7 +21,7 @@
       height: 57px;
       font-size: 16px;
       line-height: 1.3;
-      color: #161c24;
+      color: var(--color-text-primary);
       transition: all .2s;
 
       &::placeholder {
@@ -29,7 +29,7 @@
       }
 
       &:focus {
-         border-color: #5b7dde;
+         border-color: var(--color-primary);
       }
    }
 
@@ -43,14 +43,14 @@
       font-size: 18px;
       line-height: 1.1;
       color: #fff;
-      background: #5b7dde;
+      background: var(--color-primary);
 
       @include mobile {
          width: 100%;
       }
 
       &:hover {
-         background: #3e65d7;
+         background: var(--color-primary-dark);
       }
    }
 
@@ -71,7 +71,7 @@
       clip: rect(0, 0, 0, 0);
 
       &:checked + .form__checkbox-fake {
-         background: #5b7dde;
+         background: var(--color-primary);
 
          &::after {
             opacity: 1;
@@ -81,7 +81,7 @@
 
    &__checkbox-fake {
       position: relative;
-      border: 1px solid #5b7dde;
+      border: 1px solid var(--color-primary);
       border-radius: 5px;
       width: 20px;
       height: 20px;
@@ -112,7 +112,7 @@
    &__link {
       display: inline;
       font-weight: 500;
-      color: #5b7dde;
+      color: var(--color-primary);
 
       &:hover {
          text-decoration: underline;
