--- a/scss/blocks/_hero.scss
+++ b/scss/blocks/_hero.scss
@@ -49,12 +49,12 @@
 
    &__title {
       margin: 0 0 12px;
-      font-family: "Onest", sans-serif;
+      font-family: var(--font-secondary);
       font-weight: 700;
       font-size: 52px;
       line-height: 1.1;
       text-wrap: balance;
-      color: #161c24;
+      color: var(--color-text-primary);
 
       @include tablet {
          font-size: 36px;
@@ -66,13 +66,13 @@
    }
 
    &__title-mark {
-      color: #5b7dde;
+      color: var(--color-primary);
    }
 
    &__text {
       font-size: 18px;
       line-height: 1.3;
-      color: #161c24;
+      color: var(--color-text-primary);
 
       @include mobile {
          font-size: 16px;
@@ -132,12 +132,12 @@
       margin: 0 0 6px;
       font-weight: 600;
       font-size: 16px;
-      color: #161c24;
+      color: var(--color-text-primary);
    }
 
    &__feature-text {
       font-size: 16px;
       line-height: 1.2;
-      color: #454f5b;
+      color: var(--color-text-secondary);
    }
 }
