--- a/scss/blocks/_rental.scss
+++ b/scss/blocks/_rental.scss
@@ -1,10 +1,10 @@
 .rental {
    border-radius: 50px 50px 0 0;
    padding: 170px 32px;
-   background: url('../img/photos/rental.jpg') no-repeat center / cover;
+   background: url('../img/photos/rental.webp') no-repeat center / cover;
 
    @media (min-resolution: 192dpi) {
-      background-image: url('../img/photos/rental@2x.jpg');
+      background-image: url('../img/photos/rental@2x.webp');
    }
 
    @include laptop {
